syntax = "proto3";
package gambler.events;

option go_package = "gambler/api/gen/go/events";

import "google/protobuf/timestamp.proto";

// TFT-specific game status enum
enum TFTGameStatus {
  TFT_GAME_STATUS_NOT_IN_GAME = 0;     // Not currently playing (default)
  TFT_GAME_STATUS_IN_GAME = 1;         // Currently in a TFT match
}

// Events emitted from tft-tracker
message TFTGameStateChanged {
  string game_name = 1;                // Summoner game name (e.g., "Faker")
  string tag_line = 2;                 // Riot ID tag line (e.g., "KR1")
  
  TFTGameStatus previous_status = 3;   // Previous game status
  TFTGameStatus current_status = 4;    // Current game status
  
  // Game context
  string game_id = 5;                  // Riot game ID
  string queue_type = 6;               // Type of TFT game (e.g., "TFT_RANKED", "TFT_NORMAL")
  
  // Game metadata (populated when transitioning out of IN_GAME)
  optional TFTGameResult game_result = 7; // TFT-specific game result
  google.protobuf.Timestamp event_time = 8; // When this change occurred
  
}

message TFTGameResult {
  int32 placement = 1;                 // Final placement (1-8)
  int32 duration_seconds = 2;          // Game duration
}